Tweaks to the style sheet so that ads look good in real life; Prevent overflow on ad, since it was adding a scroll bar.

--- a/git-cheatsheet/1200.css
+++ b/git-cheatsheet/1200.css
@@ -4,7 +4,6 @@
 	margin-left: 20px;
 	margin-right: auto;
 	min-width: 1200px;
-  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -56,81 +55,81 @@
 
 .container_16 .grid_1{
   flex-grow: 1;
-  /*width: 8vh;*/
-	/*min-width:55px;*/
+	min-width:55px;
 }
 
 .container_16 .grid_2{
   flex-grow: 2;
-  /*width: 16vh;*/
-  /*min-width:130px;*/
+  min-width:130px;
 }
 
 .container_16 .grid_3{
   flex-grow: 3;
-  /*width: 24vh;*/
-  /*min-width:205px;*/
+  min-width:205px;
 }
 
 .container_16 .grid_4{
   flex-grow: 4;
-  /*width: 32vh;*/
-  /*min-width:280px;*/
+  min-width:280px;
 }
 
 .container_16 .grid_5{
   flex-grow: 5;
-  /*width: 40vh;*/
-  /*min-width:355px;*/
+  min-width:355px;
 }
 
 .container_16 .grid_6{
   flex-grow: 6;
-  /*width: 48vh;*/
-  /*min-width:430px;*/
+  min-width:430px;
 }
 
 .container_16 .grid_7{
   flex-grow: 7;
-  /*width: 56vh;*/
   /*min-width:505px;*/
 }
 
 .container_16 .grid_8{
   flex-grow: 8;
-  /*width: 64vh;*/
   /*min-width:580px;*/
 }
 
 .container_16 .grid_9{
+  flex-grow: 9;
   min-width:655px;
 }
 
 .container_16 .grid_10{
+  flex-grow: 10;
   min-width:730px;
 }
 
 .container_16 .grid_11{
+  flex-grow: 11;
   min-width:805px;
 }
 
 .container_16 .grid_12{
+  flex-grow: 12;
   min-width:880px;
 }
 
 .container_16 .grid_13{
+  flex-grow: 13;
   min-width:955px;
 }
 
 .container_16 .grid_14{
+  flex-grow: 14;
   min-width:1030px;
 }
 
 .container_16 .grid_15{
+  flex-grow: 15;
   min-width:1105px;
 }
 
 .container_16 .grid_16{
+  flex-grow: 16;
   min-width:1180px;
 }
 
